packages/next-swc/crates/styled_jsx/tests/errors/ts-with-css-resolve/output.js
import _JSXStyle from "next/dist/shared/lib/styled-jsx";
export default {
    styles: <_JSXStyle id={"71f03d42ea0ec6"}>{".container.jsx-71f03d42ea0ec6{background:#000;color:white;font-weight:700;height:100px}"}</_JSXStyle>,
    className: "jsx-71f03d42ea0ec6"
};
